--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,38 @@
-body{
-font-family: 'Nunito', sans-serif;
+body {
+  font-family: 'Nunito', sans-serif;
 }
-
 .header {
-    min-height: 800px;
-    margin-bottom: 120px;
+  min-height: 800px;
+  margin-bottom: 120px;
 }
-
-.nav-link.active {
-    color: #daa520 !important;
-  }
-
-.table {
-    width: 50%;
-    height: 800px;
-    background: url(../img/table.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: -1;
+.header-table {
+  width: 50%;
+  height: 800px;
+  background: url(../img/header-table.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
 }
-
 .header-container {
-    height: 550px;
-    display: flex;
-    align-items: center;
-  }
-
-  .woodies-text-center {
-    display: flex;
-    align-items: center;
-  }
-  .woodies h3 {
-    color: #3e3f43;
-    font-size: 2.25rem;
-  }
-  .woodies p {
-    font-size: 1.5rem;
-    font-weight: 600;
-  }
+  height: 550px;
+  display: flex;
+  align-items: center;
+}
+.nav-link.active {
+  color: #daa520 !important;
+}
+.woodies-text-center {
+  display: flex;
+  align-items: center;
+}
+.woodies-furniture h3 {
+  color: #3e3f43;
+  font-size: 2.25rem;
+}
+.woodies-furniture p {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
