--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ body {
   font-weight: 600;
 }
 .incono {
-  width: 30px;
   height: 40px;
   background: url(../img/incono.jpg);
   background-repeat: no-repeat;
@@ -46,7 +45,7 @@ body {
 .incono h3 {
   color: 3E3F43;
   font-size: 2.25rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 .incono h1 {
   color: 222222;
@@ -54,13 +53,27 @@ font-size: 4.5rem;
 }
 
 .header-sartenes {
-  height: 50%;
-  width: 384px;
   background: url(../img/header-sartenes.jpg);
+  height: 384px;
+  width: 20%;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
   top: 0;
   right: 0;
-  z-index: -1;
+}
+
+.text-gray-opacity {
+  color: rgb(34, 34, 34, 0.1);
+  font-size: 4.5rem;
+}
+
+#galeria-works .col-lg-3{
+  margin: 0 !important;
+  padding: 25px;
+}
+
+#galeria-works img {
+  width: 120px;
+  height: 120px
 }
